--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="save">Save</string>
     <string name="clear">Clear Field\n</string>
+    <string name="saving">Saving...</string>
 </resources>
