feat: Implement multiple mattress scanning and UI overhaul
This commit refactors the app to allow scanning and saving multiple mattresses under a single fabricator and shift. The UI has been significantly updated to support this new workflow.

Key changes include:

-   **Multiple Mattress Handling**:
    -   Replaced the single mattress input with a `RecyclerView` to display a list of scanned or manually added mattresses.
    -   Added an "Add" button to manually add mattress codes to the list.
    -   Implemented a `MattressAdapter` to manage the list, including a "Delete" button for each item.

-   **UI Overhaul (`fragment_home.xml`)**:
    -   Introduced a card at the top of the screen to display the current count of added mattresses.
    -   Added a "Shift" dropdown menu with "D" and "N" options, which is now a required field for saving.
    -   The mattress input field is now editable for manual entry and is grouped with the "Add" button.
    -   The overall layout is restructured to accommodate the new list view and input components.
    -   Set `windowSoftInputMode` to `adjustNothing` to prevent the layout from resizing when the keyboard appears.

-   **Logic Updates (`HomeFragment.java`)**:
    -   Scanning a mattress code now adds it to the list instead of overwriting a single field. Duplicate entries are prevented.
    -   The "Save" operation now sends a JSON payload containing the fabricator, the selected shift, and an array of all mattress codes.
    -   Validation is updated to require a fabricator, a valid shift, and at least one mattress before saving.
    -   The `ScanManager` initialization and lifecycle calls are wrapped in `try-catch` blocks for safer handling on devices without the OEM scanner library.
    -   After a successful save, all input fields and the mattress list are cleared.

-   **New Resources**:
    -   Added `item_mattress.xml` layout for individual rows in the mattress list.
    -   Added new string resources for "Add", "Delete",

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="save">Save</string>
     <string name="clear">Clear Field\n</string>
     <string name="saving">Saving…</string>
+    <string name="add">Add</string>
+    <string name="mattress_code">Mattress Code</string>
+    <string name="delete">Delete</string>
 </resources>
